--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
 body {
-    background-color: #166363;
-
+    background-color: #0c3636;
+    color: #ffffff;
+    font-family: Arial, sans-serif;
+    
 }
