--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,32 @@
+/*
+   ____ ____  ____  
+ / ___/ ___|/ ___| 
+| |   \___ \\___ \ 
+| |___ ___) |___) |
+ \____|____/|____/
+
+*/
+
+/*==== General config ====*/
 body {
     background-color: #0c3636;
     color: #ffffff;
-    font-family: Arial, sans-serif;
+    font-family: "Segoe UI", sans-serif;
 }
 
+/*==== Always assigned ====*/
 h1 {
-
+    color: #ffffff;
 }
 
+/*==== Class config ====*/
 .text-center {
     text-align: center;
+}
+
+.center-box {
+  margin: 0;
+  min-height: 95vh;
+  display: grid;
+  place-items: center;
 }
